[project]
name = "new-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-fireworks>=1.1.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.2",
    "pypdf>=6.9.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
